updated archive of configs

--- a/config/BNL/TS8-Setup1/etc/TS8Subsystem__Rafts.properties
+++ b/config/BNL/TS8-Setup1/etc/TS8Subsystem__Rafts.properties
@@ -145,6 +145,342 @@ R00.Reb2.DAC//sclkHigh = 1200
 #********
 R00.Reb2.DAC//sclkLow = 1600
 
+#********  R00.Reb0//ccdMask
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0//ccdMask = 7
+
+#********  R00.Reb0//id
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0//id = 0
+
+#********  R00.Reb0//ifcName
+#** 
+#** type : String
+#** category : Rafts
+#********
+#R00.Reb0//ifcName = 
+
+#********  R00.Reb0.ASPIC0//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC0//af1 = 0
+
+#********  R00.Reb0.ASPIC0//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC0//clamp = 0
+
+#********  R00.Reb0.ASPIC0//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC0//gain = 0
+
+#********  R00.Reb0.ASPIC0//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC0//rc = 0
+
+#********  R00.Reb0.ASPIC0//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC0//tm = 0
+
+#********  R00.Reb0.ASPIC1//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC1//af1 = 0
+
+#********  R00.Reb0.ASPIC1//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC1//clamp = 0
+
+#********  R00.Reb0.ASPIC1//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC1//gain = 0
+
+#********  R00.Reb0.ASPIC1//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC1//rc = 0
+
+#********  R00.Reb0.ASPIC1//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC1//tm = 0
+
+#********  R00.Reb0.ASPIC2//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC2//af1 = 0
+
+#********  R00.Reb0.ASPIC2//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC2//clamp = 0
+
+#********  R00.Reb0.ASPIC2//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC2//gain = 0
+
+#********  R00.Reb0.ASPIC2//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC2//rc = 0
+
+#********  R00.Reb0.ASPIC2//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC2//tm = 0
+
+#********  R00.Reb0.ASPIC3//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC3//af1 = 0
+
+#********  R00.Reb0.ASPIC3//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC3//clamp = 0
+
+#********  R00.Reb0.ASPIC3//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC3//gain = 0
+
+#********  R00.Reb0.ASPIC3//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC3//rc = 0
+
+#********  R00.Reb0.ASPIC3//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC3//tm = 0
+
+#********  R00.Reb0.ASPIC4//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC4//af1 = 0
+
+#********  R00.Reb0.ASPIC4//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC4//clamp = 0
+
+#********  R00.Reb0.ASPIC4//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC4//gain = 0
+
+#********  R00.Reb0.ASPIC4//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC4//rc = 0
+
+#********  R00.Reb0.ASPIC4//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC4//tm = 0
+
+#********  R00.Reb0.ASPIC5//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC5//af1 = 0
+
+#********  R00.Reb0.ASPIC5//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC5//clamp = 0
+
+#********  R00.Reb0.ASPIC5//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC5//gain = 0
+
+#********  R00.Reb0.ASPIC5//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC5//rc = 0
+
+#********  R00.Reb0.ASPIC5//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.ASPIC5//tm = 0
+
+#********  R00.Reb0.Bias0//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias0//csGate = 0
+
+#********  R00.Reb0.Bias0//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias0//gd = 0
+
+#********  R00.Reb0.Bias0//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias0//og = 0
+
+#********  R00.Reb0.Bias0//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias0//ogSh = 0
+
+#********  R00.Reb0.Bias0//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias0//rd = 0
+
+#********  R00.Reb0.Bias1//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias1//csGate = 0
+
+#********  R00.Reb0.Bias1//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias1//gd = 0
+
+#********  R00.Reb0.Bias1//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias1//og = 0
+
+#********  R00.Reb0.Bias1//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias1//ogSh = 0
+
+#********  R00.Reb0.Bias1//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias1//rd = 0
+
+#********  R00.Reb0.Bias2//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias2//csGate = 0
+
+#********  R00.Reb0.Bias2//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias2//gd = 0
+
+#********  R00.Reb0.Bias2//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias2//og = 0
+
+#********  R00.Reb0.Bias2//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias2//ogSh = 0
+
+#********  R00.Reb0.Bias2//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.Bias2//rd = 0
+
 #********  R00.Reb0.DAC//csGate
 #** 
 #** type : int[]
@@ -159,6 +495,13 @@ R00.Reb2.DAC//sclkLow = 1600
 #********
 #R00.Reb0.DAC//pclkHighSh = 0
 
+#********  R00.Reb0.DAC//pclkLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.DAC//pclkLowSh = 0
+
 #********  R00.Reb0.DAC//rgHighSh
 #** 
 #** type : int
@@ -166,12 +509,383 @@ R00.Reb2.DAC//sclkLow = 1600
 #********
 #R00.Reb0.DAC//rgHighSh = 0
 
+#********  R00.Reb0.DAC//rgLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.DAC//rgLowSh = 0
+
 #********  R00.Reb0.DAC//sclkHighSh
 #** 
 #** type : int
 #** category : Rafts
 #********
 #R00.Reb0.DAC//sclkHighSh = 0
+
+#********  R00.Reb0.DAC//sclkLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb0.DAC//sclkLowSh = 0
+
+#********  R00.Reb1//ccdMask
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1//ccdMask = 7
+
+#********  R00.Reb1//id
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1//id = 1
+
+#********  R00.Reb1//ifcName
+#** 
+#** type : String
+#** category : Rafts
+#********
+#R00.Reb1//ifcName = 
+
+#********  R00.Reb1.ASPIC0//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC0//af1 = 0
+
+#********  R00.Reb1.ASPIC0//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC0//clamp = 0
+
+#********  R00.Reb1.ASPIC0//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC0//gain = 0
+
+#********  R00.Reb1.ASPIC0//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC0//rc = 0
+
+#********  R00.Reb1.ASPIC0//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC0//tm = 0
+
+#********  R00.Reb1.ASPIC1//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC1//af1 = 0
+
+#********  R00.Reb1.ASPIC1//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC1//clamp = 0
+
+#********  R00.Reb1.ASPIC1//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC1//gain = 0
+
+#********  R00.Reb1.ASPIC1//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC1//rc = 0
+
+#********  R00.Reb1.ASPIC1//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC1//tm = 0
+
+#********  R00.Reb1.ASPIC2//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC2//af1 = 0
+
+#********  R00.Reb1.ASPIC2//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC2//clamp = 0
+
+#********  R00.Reb1.ASPIC2//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC2//gain = 0
+
+#********  R00.Reb1.ASPIC2//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC2//rc = 0
+
+#********  R00.Reb1.ASPIC2//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC2//tm = 0
+
+#********  R00.Reb1.ASPIC3//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC3//af1 = 0
+
+#********  R00.Reb1.ASPIC3//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC3//clamp = 0
+
+#********  R00.Reb1.ASPIC3//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC3//gain = 0
+
+#********  R00.Reb1.ASPIC3//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC3//rc = 0
+
+#********  R00.Reb1.ASPIC3//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC3//tm = 0
+
+#********  R00.Reb1.ASPIC4//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC4//af1 = 0
+
+#********  R00.Reb1.ASPIC4//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC4//clamp = 0
+
+#********  R00.Reb1.ASPIC4//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC4//gain = 0
+
+#********  R00.Reb1.ASPIC4//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC4//rc = 0
+
+#********  R00.Reb1.ASPIC4//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC4//tm = 0
+
+#********  R00.Reb1.ASPIC5//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC5//af1 = 0
+
+#********  R00.Reb1.ASPIC5//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC5//clamp = 0
+
+#********  R00.Reb1.ASPIC5//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC5//gain = 0
+
+#********  R00.Reb1.ASPIC5//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC5//rc = 0
+
+#********  R00.Reb1.ASPIC5//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.ASPIC5//tm = 0
+
+#********  R00.Reb1.Bias0//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias0//csGate = 0
+
+#********  R00.Reb1.Bias0//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias0//gd = 0
+
+#********  R00.Reb1.Bias0//od
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias0//od = 0
+
+#********  R00.Reb1.Bias0//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias0//og = 0
+
+#********  R00.Reb1.Bias0//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias0//ogSh = 0
+
+#********  R00.Reb1.Bias0//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias0//rd = 0
+
+#********  R00.Reb1.Bias1//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias1//csGate = 0
+
+#********  R00.Reb1.Bias1//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias1//gd = 0
+
+#********  R00.Reb1.Bias1//od
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias1//od = 0
+
+#********  R00.Reb1.Bias1//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias1//og = 0
+
+#********  R00.Reb1.Bias1//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias1//ogSh = 0
+
+#********  R00.Reb1.Bias1//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias1//rd = 0
+
+#********  R00.Reb1.Bias2//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias2//csGate = 0
+
+#********  R00.Reb1.Bias2//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias2//gd = 0
+
+#********  R00.Reb1.Bias2//od
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias2//od = 0
+
+#********  R00.Reb1.Bias2//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias2//og = 0
+
+#********  R00.Reb1.Bias2//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias2//ogSh = 0
+
+#********  R00.Reb1.Bias2//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.Bias2//rd = 0
 
 #********  R00.Reb1.DAC//csGate
 #** 
@@ -187,6 +901,13 @@ R00.Reb2.DAC//sclkLow = 1600
 #********
 #R00.Reb1.DAC//pclkHighSh = 0
 
+#********  R00.Reb1.DAC//pclkLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.DAC//pclkLowSh = 0
+
 #********  R00.Reb1.DAC//rgHighSh
 #** 
 #** type : int
@@ -194,12 +915,383 @@ R00.Reb2.DAC//sclkLow = 1600
 #********
 #R00.Reb1.DAC//rgHighSh = 0
 
+#********  R00.Reb1.DAC//rgLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.DAC//rgLowSh = 0
+
 #********  R00.Reb1.DAC//sclkHighSh
 #** 
 #** type : int
 #** category : Rafts
 #********
 #R00.Reb1.DAC//sclkHighSh = 0
+
+#********  R00.Reb1.DAC//sclkLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb1.DAC//sclkLowSh = 0
+
+#********  R00.Reb2//ccdMask
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2//ccdMask = 7
+
+#********  R00.Reb2//id
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2//id = 2
+
+#********  R00.Reb2//ifcName
+#** 
+#** type : String
+#** category : Rafts
+#********
+#R00.Reb2//ifcName = 
+
+#********  R00.Reb2.ASPIC0//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC0//af1 = 0
+
+#********  R00.Reb2.ASPIC0//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC0//clamp = 0
+
+#********  R00.Reb2.ASPIC0//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC0//gain = 0
+
+#********  R00.Reb2.ASPIC0//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC0//rc = 0
+
+#********  R00.Reb2.ASPIC0//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC0//tm = 0
+
+#********  R00.Reb2.ASPIC1//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC1//af1 = 0
+
+#********  R00.Reb2.ASPIC1//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC1//clamp = 0
+
+#********  R00.Reb2.ASPIC1//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC1//gain = 0
+
+#********  R00.Reb2.ASPIC1//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC1//rc = 0
+
+#********  R00.Reb2.ASPIC1//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC1//tm = 0
+
+#********  R00.Reb2.ASPIC2//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC2//af1 = 0
+
+#********  R00.Reb2.ASPIC2//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC2//clamp = 0
+
+#********  R00.Reb2.ASPIC2//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC2//gain = 0
+
+#********  R00.Reb2.ASPIC2//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC2//rc = 0
+
+#********  R00.Reb2.ASPIC2//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC2//tm = 0
+
+#********  R00.Reb2.ASPIC3//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC3//af1 = 0
+
+#********  R00.Reb2.ASPIC3//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC3//clamp = 0
+
+#********  R00.Reb2.ASPIC3//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC3//gain = 0
+
+#********  R00.Reb2.ASPIC3//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC3//rc = 0
+
+#********  R00.Reb2.ASPIC3//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC3//tm = 0
+
+#********  R00.Reb2.ASPIC4//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC4//af1 = 0
+
+#********  R00.Reb2.ASPIC4//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC4//clamp = 0
+
+#********  R00.Reb2.ASPIC4//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC4//gain = 0
+
+#********  R00.Reb2.ASPIC4//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC4//rc = 0
+
+#********  R00.Reb2.ASPIC4//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC4//tm = 0
+
+#********  R00.Reb2.ASPIC5//af1
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC5//af1 = 0
+
+#********  R00.Reb2.ASPIC5//clamp
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC5//clamp = 0
+
+#********  R00.Reb2.ASPIC5//gain
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC5//gain = 0
+
+#********  R00.Reb2.ASPIC5//rc
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC5//rc = 0
+
+#********  R00.Reb2.ASPIC5//tm
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.ASPIC5//tm = 0
+
+#********  R00.Reb2.Bias0//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias0//csGate = 0
+
+#********  R00.Reb2.Bias0//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias0//gd = 0
+
+#********  R00.Reb2.Bias0//od
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias0//od = 0
+
+#********  R00.Reb2.Bias0//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias0//og = 0
+
+#********  R00.Reb2.Bias0//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias0//ogSh = 0
+
+#********  R00.Reb2.Bias0//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias0//rd = 0
+
+#********  R00.Reb2.Bias1//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias1//csGate = 0
+
+#********  R00.Reb2.Bias1//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias1//gd = 0
+
+#********  R00.Reb2.Bias1//od
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias1//od = 0
+
+#********  R00.Reb2.Bias1//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias1//og = 0
+
+#********  R00.Reb2.Bias1//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias1//ogSh = 0
+
+#********  R00.Reb2.Bias1//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias1//rd = 0
+
+#********  R00.Reb2.Bias2//csGate
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias2//csGate = 0
+
+#********  R00.Reb2.Bias2//gd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias2//gd = 0
+
+#********  R00.Reb2.Bias2//od
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias2//od = 0
+
+#********  R00.Reb2.Bias2//og
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias2//og = 0
+
+#********  R00.Reb2.Bias2//ogSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias2//ogSh = 0
+
+#********  R00.Reb2.Bias2//rd
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.Bias2//rd = 0
 
 #********  R00.Reb2.DAC//csGate
 #** 
@@ -215,6 +1307,13 @@ R00.Reb2.DAC//sclkLow = 1600
 #********
 #R00.Reb2.DAC//pclkHighSh = 0
 
+#********  R00.Reb2.DAC//pclkLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.DAC//pclkLowSh = 0
+
 #********  R00.Reb2.DAC//rgHighSh
 #** 
 #** type : int
@@ -222,10 +1321,24 @@ R00.Reb2.DAC//sclkLow = 1600
 #********
 #R00.Reb2.DAC//rgHighSh = 0
 
+#********  R00.Reb2.DAC//rgLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.DAC//rgLowSh = 0
+
 #********  R00.Reb2.DAC//sclkHighSh
 #** 
 #** type : int
 #** category : Rafts
 #********
 #R00.Reb2.DAC//sclkHighSh = 0
+
+#********  R00.Reb2.DAC//sclkLowSh
+#** 
+#** type : int
+#** category : Rafts
+#********
+#R00.Reb2.DAC//sclkLowSh = 0
 
