--- a/config/BNL/TS8-Setup1/etc/system.properties
+++ b/config/BNL/TS8-Setup1/etc/system.properties
@@ -17,6 +17,18 @@ system.property.lsst.ccs.teststand.envirofile=/home/homer/bnlenviro.dat
 system.property.lsst.ccs.teststand.tsguidest=ts
 system.property.lsst.ccs.teststand.fluxcalfile=/opt/lsst/redhat6-x86_64-64bit-gcc44/config_files/BNL/Slitwidth_12-Jun-2015.dat
 
+system.property.lsst.ccs.ts8.shutter_reb=R00.Reb0
+system.property.lsst.ccs.ts8.xed_reb=R00.Reb0
+
+system.property.lsst.ccs.ts8.ODI_Min=0.0
+system.property.lsst.ccs.ts8.DigI_Min=0.450
+#system.property.lsst.ccs.ts8.AnaI_Min=0.400
+system.property.lsst.ccs.ts8.ClkI_Min=0.090
+#system.property.lsst.ccs.ts8.ODI_Max=0.400
+#system.property.lsst.ccs.ts8.DigI_Max=0.750
+#system.property.lsst.ccs.ts8.AnaI_Max=0.600
+#system.property.lsst.ccs.ts8.ClkI_Max=0.200
+
 #Debugging options
 #system.option.Xdebug
 #system.option.Xrunjdwp:server=y,transport=dt_socket,address=4000,suspend=n
