latest updates from etu testing

--- a/config/BNL/eotest_calibrations.cfg
+++ b/config/BNL/eotest_calibrations.cfg
@@ -8,3 +8,8 @@ system_noise_file = /opt/lsst/redhat6-x86_64-64bit-gcc44/config_files/BNL/TS3-Se
 system_crosstalk_file = None
 photodiode_ratio_file = /opt/lsst/redhat6-x86_64-64bit-gcc44/config_files/BNL/TS3-Setup1/calib/pd_ratio_201610290033-SK-3J019.txt
 illumination_non_uniformity_file = None
+[ts8-raft1.inst.bnl.gov]
+system_noise_file = /home/ts8prod/calibs/noise.txt
+system_crosstalk_file = None
+photodiode_ratio_file = /home/ts8prod/calibs/pd_ratio_201608301138-PD_RATIO-3J019.txt
+illumination_non_uniformity_file = None
