png file handling

--- a/config/SLAC/eotest_calibrations.cfg
+++ b/config/SLAC/eotest_calibrations.cfg
@@ -1,5 +1,5 @@
 [default]
 system_noise_file = None
 system_crosstalk_file = None
-photodiode_ratio_file = None
+photodiode_ratio_file = /nfs/farm/g/lsst/u1/mirror/BNL-test/test/LCA-10753_RSA/LCA-10753_RSA-003_ETU1-Dev/4549D/qe_raft_analysis/v0/25197/pd_ratio_201608301138-PD_RATIO-3J019.txt
 illumination_non_uniformity_file = None
