--- a/config/BNL/site-rtm-prod.cfg
+++ b/config/BNL/site-rtm-prod.cfg
@@ -23,7 +23,7 @@ C  299792458               # in meters per second, in case you need it
 #
 FE55_BCOUNT     1     # number of bias frames per complete fe55 set
 FE55_DCOUNT     0     # number of dark frames per fe55 'command'
-fe55    50.0   10     # exposure time and image count for an fe55 data set
+fe55    240.0   10     # exposure time and image count for an fe55 data set
 
 ###############################################################################
 # Dark
@@ -53,8 +53,8 @@ SFLAT_BCOUNT   0    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
 SFLAT_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
-sflat  500  1000   1   # wavelength, signal(e-), count 
-sflat  500  50000  1   # wavelength, signal(e-), count 
+sflat  500  1000   5   # wavelength, signal(e-), count 
+sflat  500  50000  5   # wavelength, signal(e-), count 
 
 ###############################################################################
 # Lambda
@@ -76,17 +76,17 @@ LAMBDA_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 #.lambda   0340   20000
 lambda   0350   20000
 #lambda   0360   20000
-#lambda   0370   20000
+lambda   0370   20000
 #lambda   0380   20000
 #lambda   0390   20000
 lambda   0400   20000
 #.lambda   0410   20000
 #lambda   0420   20000
-#lambda   0430   20000
+lambda   0430   20000
 #lambda   0440   20000
 lambda   0450   20000
 #lambda   0460   20000
-#lambda   0470   20000
+lambda   0470   20000
 #lambda   0480   20000
 #lambda   0490   20000
 lambda   0500   20000
@@ -96,17 +96,17 @@ lambda   0500   20000
 #.lambda   0540   20000
 lambda   0550   20000
 #.lambda   0560   20000
-#lambda   0570   20000
+lambda   0570   20000
 #lambda   0580   20000
 #lambda   0590   20000
 lambda   0600   20000
 #lambda   0610   20000
 #lambda   0620   20000
-#lambda   0630   20000
+lambda   0630   20000
 #lambda   0640   20000
 lambda   0650   20000
 #lambda   0660   20000
-#lambda   0670   20000
+lambda   0670   20000
 #.lambda   0680   20000
 #.lambda   0690   20000
 lambda   0700   20000
@@ -141,12 +141,12 @@ lambda   0960   20000
 lambda   1000   20000
 #lambda   1010   20000
 #lambda   1020   20000
-#lambda   1030   20000
+lambda   1030   20000
 #lambda   1040   20000
 lambda   1050   20000
 #lambda   1060   20000
 #lambda   1070   20000
-#lambda   1080   20000
+lambda   1080   20000
 #lambda   1090   20000
 lambda   1100   20000
 
@@ -191,23 +191,23 @@ flat     4500
 flat     7500
 flat    10000
 #flat    12000
-#flat    15000
+flat    15000
 #flat    20000
-#flat    25000
+flat    25000
 #flat    30000
 #flat    35000
 flat    40000
 #flat    45000
-#flat    50000
+flat    50000
 #flat    55000
 flat    60000
 #flat    65000
-#flat    70000
+flat    70000
 #flat    75000
 flat    80000
 #flat    85000
 #flat    86000
-#flat    87000
+flat    87000
 #flat    88000
 #flat    89000
 flat    90000
@@ -215,7 +215,7 @@ flat    90000
 #flat    92000
 #flat    93000
 #flat    94000
-#flat    95000
+flat    95000
 flat   100000
 #flat   105000
 flat   110000
@@ -230,7 +230,7 @@ flat   150000
 #flat   155000
 flat   160000
 #flat   165000
-#flat   170000
+flat   170000
 flat   180000
 #flat   190000
 flat   200000
