updated preflight and readiness scripts for TS8

--- a/config/BNL/site-rtm-prod.cfg
+++ b/config/BNL/site-rtm-prod.cfg
@@ -71,8 +71,8 @@ LAMBDA_BCOUNT    1    # total number of bias frames
 LAMBDA_HILIM   120.0  # maximum seconds for a fluxcal exposure
 LAMBDA_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
-#.lambda   0320   20000
-#.lambda   0330   20000
+lambda   0320   20000
+lambda   0330   20000
 #.lambda   0340   20000
 lambda   0350   20000
 #lambda   0360   20000
@@ -170,7 +170,7 @@ FLAT_LOLIM  0.025    # minimum seconds for a flat field exposure
 #flat      200
 #flat      300
 #flat      400
-#flat      500
+flat      500
 #flat      600
 #flat      700
 flat      800
