--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,7 +1,7 @@
 itl_acffile = bnl_STA_20160917_A_unreversed.acf
 e2v_acffile = CCD250_20161109_LOW_GAIN-reversed-xed-tap-fixed.acf
-itl_seqfile = /home/ts8prod/lsst/redhat6-x86_64-64bit-gcc44/test/lsst-jh/sequencer-files*/sequencer-ts8-ITL-v8-etu2-pntr-explicit.seq
-e2v_seqfile = /home/ts8prod/lsst/redhat6-x86_64-64bit-gcc44/test/lsst-jh/sequencer-files*/sequencer-ts8-E2V-v1.seq
+itl_seqfile = /home/ts8prod/workdir/sequencer-ts8-ITL-v8-etu2-pntr-explicit.seq
+e2v_seqfile = /home/ts8prod/lsst/redhat6-x86_64-64bit-gcc44/test/lsst-jh/sequencer-files-0.0.2/sequencer-ts8-E2V-v1.seq
 acqcfgfile = site-prod.cfg
 rtmacqcfgfile = site-rtm-prod.cfg
 calfile = fluxfile.txt
