--- a/config/BNL/site-rtm-prod-shortened.cfg
+++ b/config/BNL/site-rtm-prod-shortened.cfg
@@ -73,81 +73,81 @@ LAMBDA_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
 lambda   0320   20000
 lambda   0330   20000
-lambda   0340   20000
+#.lambda   0340   20000
 lambda   0350   20000
-lambda   0360   20000
+#lambda   0360   20000
 lambda   0370   20000
-lambda   0380   20000
-lambda   0390   20000
+#lambda   0380   20000
+#lambda   0390   20000
 lambda   0400   20000
-lambda   0410   20000
-lambda   0420   20000
+#.lambda   0410   20000
+#lambda   0420   20000
 lambda   0430   20000
-lambda   0440   20000
+#lambda   0440   20000
 lambda   0450   20000
-lambda   0460   20000
+#lambda   0460   20000
 lambda   0470   20000
-lambda   0480   20000
-lambda   0490   20000
+#lambda   0480   20000
+#lambda   0490   20000
 lambda   0500   20000
-lambda   0510   20000
-lambda   0520   20000
-lambda   0530   20000
-lambda   0540   20000
+#lambda   0510   20000
+#lambda   0520   20000
+#lambda   0530   20000
+#.lambda   0540   20000
 lambda   0550   20000
-lambda   0560   20000
+#.lambda   0560   20000
 lambda   0570   20000
-lambda   0580   20000
-lambda   0590   20000
+#lambda   0580   20000
+#lambda   0590   20000
 lambda   0600   20000
-lambda   0610   20000
-lambda   0620   20000
+#lambda   0610   20000
+#lambda   0620   20000
 lambda   0630   20000
-lambda   0640   20000
+#lambda   0640   20000
 lambda   0650   20000
-lambda   0660   20000
+#lambda   0660   20000
 lambda   0670   20000
-lambda   0680   20000
-lambda   0690   20000
+#.lambda   0680   20000
+#.lambda   0690   20000
 lambda   0700   20000
-lambda   0710   20000
+#lambda   0710   20000
 lambda   0720   20000
-lambda   0730   20000
-lambda   0740   20000
+#lambda   0730   20000
+#lambda   0740   20000
 lambda   0750   20000
-lambda   0760   20000
+#lambda   0760   20000
 lambda   0770   20000
-lambda   0780   20000
-lambda   0790   20000
+#lambda   0780   20000
+#lambda   0790   20000
 lambda   0800   20000
-lambda   0810   20000
-lambda   0820   20000
+#lambda   0810   20000
+#lambda   0820   20000
 lambda   0830   20000
-lambda   0840   20000
-lambda   0850   20000
+#lambda   0840   20000
+#lambda   0850   20000
 lambda   0870   20000
-lambda   0880   20000
-lambda   0890   20000
+#lambda   0880   20000
+#lambda   0890   20000
 lambda   0900   20000
-lambda   0910   20000
+#lambda   0910   20000
 lambda   0920   20000
-lambda   0930   20000
-lambda   0940   20000
-lambda   0950   20000
+#lambda   0930   20000
+#lambda   0940   20000
+#lambda   0950   20000
 lambda   0960   20000
-lambda   0970   20000
-lambda   0980   20000
-lambda   0990   20000
+#lambda   0970   20000
+#lambda   0980   20000
+#lambda   0990   20000
 lambda   1000   20000
-lambda   1010   20000
-lambda   1020   20000
+#lambda   1010   20000
+#lambda   1020   20000
 lambda   1030   20000
-lambda   1040   20000
+#lambda   1040   20000
 lambda   1050   20000
-lambda   1060   20000
-lambda   1070   20000
+#lambda   1060   20000
+#lambda   1070   20000
 lambda   1080   20000
-lambda   1090   20000
+#lambda   1090   20000
 lambda   1100   20000
 
 ###############################################################################
