adjusted exposure specifications for Fe55 and flats

--- a/config/BNL/site-rtm-prod.cfg
+++ b/config/BNL/site-rtm-prod.cfg
@@ -23,7 +23,7 @@ C  299792458               # in meters per second, in case you need it
 #
 FE55_BCOUNT     1     # number of bias frames per complete fe55 set
 FE55_DCOUNT     0     # number of dark frames per fe55 'command'
-fe55    240.0   1     # exposure time and image count for an fe55 data set
+fe55   150.0   10    # exposure time and image count for an fe55 data set
 
 ###############################################################################
 # Dark
@@ -36,7 +36,7 @@ fe55    240.0   1     # exposure time and image count for an fe55 data set
 # NOTE: ANALYSIS REQUIRES EXPTIME TO BE EQUAL
 DARK_BCOUNT    5    # number of bias frames per dark set
 DARK_DELAY     0    # number of seconds betwen darks in a set
-dark   500.0   2    # integration time and image count for dark set
+dark   500.0   5    # integration time and image count for dark set
 
 ###############################################################################
 # superflat
@@ -180,7 +180,7 @@ flat      800
 flat     1200
 #flat     1300
 #flat     1400
-#flat     1500
+flat     1500
 #flat     2000
 flat     2500
 #flat     3000
