specified acquisition steps and seqquencer for production use

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,6 +1,16 @@
 itl_acffile = bnl_STA_20160917_A_unreversed.acf
 e2v_acffile = CCD250_20161109_RCLR4.acf
-itl_seqfile = /home/ts8prod/workdir/sequencer-ts8-ITL-v8-etu2-pntr-explicit.seq
+itla_seqfile = /home/ts8prod/workdir/TS8_ITL_ResetFirst_20170301.seq
+itl_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetFirst_CJ_20170321_mod3.seq
+itlc_seqfile = /home/ts8prod/workdir/TS8_ITL_ResetFirst_CJ_20170321_mod2.seq
+itld_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetCCD_20170306.seq
+itlf_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetAspic_20170306.seq
+itlg_seqfile = /home/ts8prod/sequencers/TS8_ITL_ClampAspic_20170306.seq
+itlh_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoSerials_20170306.seq
+itli_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoSerialsCCDReset_20170306.seq
+itlj_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoParallels_20170306.seq
+itlk_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoClocks_20170306.seq
+itll_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetFirst__1usISO1_20170307.seq
 e2v_seqfile = /home/ts8prod/lsst/redhat6-x86_64-64bit-gcc44/test/lsst-jh/sequencer-files-0.0.2/sequencer-ts8-E2V-v1.seq
 acqcfgfile = site-prod.cfg
 rtmacqcfgfile = site-rtm-prod.cfg
