--- a/config/BNL/site-rtm-prod.cfg
+++ b/config/BNL/site-rtm-prod.cfg
@@ -21,7 +21,7 @@ C  299792458               # in meters per second, in case you need it
 # For each command, dark images of the appropriate integration time are 
 # also acquired. The number of dark frames is set by FE55_DCOUNT.
 #
-FE55_BCOUNT     1     # number of bias frames per complete fe55 set
+FE55_BCOUNT     10     # number of bias frames per complete fe55 set
 FE55_DCOUNT     0     # number of dark frames per fe55 'command'
 fe55    240.0   25     # exposure time and image count for an fe55 data set
 
@@ -35,7 +35,7 @@ fe55    240.0   25     # exposure time and image count for an fe55 data set
 #
 STBL_BCOUNT     1     # number of bias frames per complete fe55 set
 STBL_DCOUNT     0     # number of dark frames per fe55 'command'
-stbl    240.0   600     # exposure time and image count for an fe55 data set
+stbl    240.0   200     # exposure time and image count for an fe55 data set
 
 ###############################################################################
 # Dark
@@ -65,8 +65,8 @@ SFLAT_BCOUNT   0    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
 SFLAT_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
-sflat  500  1000   5   # wavelength, signal(e-), count 
-sflat  500  50000  5   # wavelength, signal(e-), count 
+sflat  500  1000   10   # wavelength, signal(e-), count 
+sflat  500  50000  10   # wavelength, signal(e-), count 
 
 ###############################################################################
 # Lambda
@@ -249,6 +249,7 @@ flat   200000
 #flat   210000
 flat   220000
 #flat   230000
+flat   250000
 
 ################################################################################
 # Pocket Pumping
