updated between job pressure checker

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -29,7 +29,8 @@ itlj_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoParallels_20170306.seq
 itlk_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoClocks_20170306.seq
 itll_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetFirst__1usISO1_20170307.seq
 e2v_1st_seqfile = /home/ts8prod/sequencers/TS8_E2V_ResetFirst_CJ_20170321_mod3.seq
-e2v_seqfile = /home/ts8prod/sequencers/TS8_E2V_ResetFirst_CJ_20170426_mod3.seq
+e2v_overpmod_seqfile = /home/ts8prod/sequencers/TS8_E2V_ResetFirst_CJ_20170426_mod3.seq
+e2v_seqfile = /home/ts8prod/sequencers/seq-e2v-shorterp-v2.seq
 e2vo_seqfile = /home/ts8prod/sequencers/seq-e2v-overp.txt
 acqcfgfile = site-prod.cfg
 rtmacqcfgfile = site-rtm-prod.cfg
