Added fast parallel transfer acf file CCD250_20161109_RCLR4_PF.acf The same parallel transfer as e2v uses to mitigate tearing is used.

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,5 +1,5 @@
 itl_acffile = bnl_STA_20160917_A_unreversed.acf
-e2v_acffile = CCD250_20161109_RCLR4.acf
+e2v_acffile = CCD250_20161109_RCLR4_PF.acf
 itl_s1s3_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_rmBufferS1S3.seq
 itla_seqfile = /home/ts8prod/workdir/TS8_ITL_ResetFirst_20170301.seq
 itl_t1_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_base.seq
