updated sequencer file references

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,37 +1,7 @@
 itl_acffile = bnl_STA_20160917_A_unreversed.acf
-e2v_acffile = CCD250_20161109_RCLR4_PF.acf
-itl_s1s3_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_rmBufferS1S3.seq
-itla_seqfile = /home/ts8prod/workdir/TS8_ITL_ResetFirst_20170301.seq
-itl_t1_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_base.seq
-itl_t2_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_ISO1_150.seq
-itl_t3_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_ISO1_200.seq
-itl_t4_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_slice_20ns.seq
-itl_t8_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_splitRD_20.seq
-itl_t9_seqfile = /home/ts8prod/sequencers/NS1/RTM1noise_splitRD_20_TimeS_120.seq
-itl_t10_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_splitRD_30.seq
-itl_t11_seqfile = /home/ts8prod/sequencers/NS1/RTM1noise_splitRD_30_TimeS_120.seq
-itl_t12_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_TimeC_200.seq
-itl_t13_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_TimeS_100.seq
-itl_t14_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_TimeS_120.seq
-itl_t15_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_TimeS_140.seq
-itl_t16_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_TimeS_160.seq
-itl_t17_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1noise_TimeS_200.seq
-itl_m50_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1new_mod50.seq
-itl_seqfile = /home/ts8prod/sequencers/NS1/TS8_ITL_RTM1new_2s.seq
-itl_3_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetFirst_CJ_20170321_mod3.seq
-itlc_seqfile = /home/ts8prod/workdir/TS8_ITL_ResetFirst_CJ_20170321_mod2.seq
-itld_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetCCD_20170306.seq
-itlf_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetAspic_20170306.seq
-itlg_seqfile = /home/ts8prod/sequencers/TS8_ITL_ClampAspic_20170306.seq
-itlh_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoSerials_20170306.seq
-itli_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoSerialsCCDReset_20170306.seq
-itlj_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoParallels_20170306.seq
-itlk_seqfile = /home/ts8prod/sequencers/TS8_ITL_NoClocks_20170306.seq
-itll_seqfile = /home/ts8prod/sequencers/TS8_ITL_ResetFirst__1usISO1_20170307.seq
-e2v_1st_seqfile = /home/ts8prod/sequencers/TS8_E2V_ResetFirst_CJ_20170321_mod3.seq
-e2v_overpmod_seqfile = /home/ts8prod/sequencers/TS8_E2V_ResetFirst_CJ_20170426_mod3.seq
-e2v_seqfile = /home/ts8prod/sequencers/seq-e2v-shorterp-v2.seq
-e2vo_seqfile = /home/ts8prod/sequencers/seq-e2v-overp.txt
+e2v_acffile = CCD250_20161109_RCLR4.acf
+itl_seqfile = ${SEQUENCERFILESDIR}/RTM1/TS8_ITL_RTM1new_2s.seq
+e2v_seqfile = ${SEQUENCERFILESDIR}/RTM2/seq-e2v-shorterp-2s.seq
 acqcfgfile = site-prod.cfg
-rtmacqcfgfile = site-rtm-prod.cfg
+rtmacqcfgfile = site-rtm.cfg
 calfile = fluxfile.txt
