fixed rtm cfg file reference and add cfg with short QE acquisition

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -3,5 +3,5 @@ e2v_acffile = CCD250_20161109_RCLR4.acf
 itl_seqfile = ${SEQUENCERFILESDIR}/RTM1/TS8_ITL_RTM1new_2s.seq
 e2v_seqfile = ${SEQUENCERFILESDIR}/RTM2/seq-e2v-shorterp-2s.seq
 acqcfgfile = site-prod.cfg
-rtmacqcfgfile = site-rtm.cfg
+rtmacqcfgfile = site-rtm-prod.cfg
 calfile = fluxfile.txt
