--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,7 +1,19 @@
-itl_acffile = bnl_STA_20160917_A_unreversed-remapped.acf
+itl_acffile = bnl_STA_20160917_A_unreversed.acf
 e2v_acffile = CCD250_20161109_RCLR4.acf
-itl_seqfile = ${SEQUENCERFILESDIR}/RTM1/TS8_ITL_RTM1new_2s.seq
+itl_rtm1_seqfile = ${SEQUENCERFILESDIR}/RTM1/TS8_ITL_RTM1new_2s.seq
+itl_oldnom_seqfile = /home/ts8prod/sequencers/TS8_ITL_fix.seq
+itl_1_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_cutramps.seq
+itl_2_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_mix.seq
+itl_3_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmlast.seq
+itl_best_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGcross.seq
+itl_5_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGfirst_iso1.seq
+itl_6_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGfirst.seq
+itl_7_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGtrig.seq
+itl_8_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmS1S3.seq
+itl_9_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmS1S3_splitRD.seq
+itl_seqfile = /home/ts8prod/sequencers/TS8_ITL_2s_iso1_0clr.seq
+e2v_70ns_seqfile = /home/ts8prod/sequencers/seq-e2v-shorterp-2s-70ns.seq
 e2v_seqfile = ${SEQUENCERFILESDIR}/RTM2/seq-e2v-shorterp-2s.seq
 acqcfgfile = site-prod.cfg
-rtmacqcfgfile = site-rtm-prod.cfg
+rtmacqcfgfile = site-rtm-shortqe.cfg
 calfile = fluxfile.txt
