added stats files for sb thermal traveler jobs and fixed output fits filename for regular augmented thermal traveler jobs

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -5,13 +5,13 @@ itl_oldnom_seqfile = /home/ts8prod/sequencers/TS8_ITL_fix.seq
 itl_1_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_cutramps.seq
 itl_2_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_mix.seq
 itl_3_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmlast.seq
-itl_best_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGcross.seq
+itl_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGcross.seq
 itl_5_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGfirst_iso1.seq
 itl_6_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGfirst.seq
 itl_7_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmRGtrig.seq
 itl_8_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmS1S3.seq
 itl_9_seqfile = /home/ts8prod/sequencers/RunFix/TS8_ITL_rmS1S3_splitRD.seq
-itl_seqfile = /home/ts8prod/sequencers/TS8_ITL_2s_iso1_0clr.seq
+itl_iso1_seqfile = /home/ts8prod/sequencers/TS8_ITL_2s_iso1_0clr.seq
 e2v_70ns_seqfile = /home/ts8prod/sequencers/seq-e2v-shorterp-2s-70ns.seq
 e2v_shorterp_seqfile = ${SEQUENCERFILESDIR}/RTM2/seq-e2v-shorterp-2s.seq
 e2v_seqfile = ${SEQUENCERFILESDIR}/RTM2/seq-e2v-2s-fixcte.seq
