--- a/config/BNL/TS8-Setup1/etc/TS8Subsystem__Rafts.properties
+++ b/config/BNL/TS8-Setup1/etc/TS8Subsystem__Rafts.properties
@@ -20,6 +20,9 @@ R00.Reb0.DAC//sclkHighP = 5.0
 R00.Reb0.DAC//rgLowP = -2.0
 R00.Reb0.DAC//rgHighP = 8.0
 
+
+
+
 R00.Reb1.Bias0//gdP = 20.0
 R00.Reb1.Bias0//odP = 26.0
 R00.Reb1.Bias0//rdP = 14.0
@@ -41,3 +44,29 @@ R00.Reb1.DAC//sclkLowP = -5.0
 R00.Reb1.DAC//sclkHighP = 5.0
 R00.Reb1.DAC//rgLowP = -2.0
 R00.Reb1.DAC//rgHighP = 8.0
+
+
+
+
+
+R00.Reb2.Bias0//gdP = 20.0
+R00.Reb2.Bias0//odP = 26.0
+R00.Reb2.Bias0//rdP = 14.0
+R00.Reb2.Bias0//ogP = 1.0
+
+R00.Reb2.Bias1//gdP = 20.0
+R00.Reb2.Bias1//odP = 26.0
+R00.Reb2.Bias1//rdP = 14.0
+R00.Reb2.Bias1//ogP = 1.0
+
+R00.Reb2.Bias2//gdP = 20.0
+R00.Reb2.Bias2//odP = 26.0
+R00.Reb2.Bias2//rdP = 14.0
+R00.Reb2.Bias2//ogP = 1.0
+
+R00.Reb2.DAC//pclkLowP = -9.0
+R00.Reb2.DAC//pclkHighP = 3.0
+R00.Reb2.DAC//sclkLowP = -5.0
+R00.Reb2.DAC//sclkHighP = 5.0
+R00.Reb2.DAC//rgLowP = -2.0
+R00.Reb2.DAC//rgHighP = 8.0
