--- a/T08/RSA_0_5min_record__514/v0/ts_quantities.cfg
+++ b/T08/RSA_0_5min_record__514/v0/ts_quantities.cfg
@@ -5,8 +5,8 @@ y00 = temp_a
 y01 = temp_b
 y02 = temp_c
 y03 = temp_d
-y04 = SetPnt1
-y05 = SetPnt2
+#y04 = SetPnt1
+#y05 = SetPnt2
 [Plate_Heaters]
 units = Percent
 y06 = htrread1
