added expedited EO test config file for TS3 testing

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,8 +1,11 @@
 itl_acffile = bnl_STA_20160917_A_ts3_2_retapped.acf
+itl_ts3_2_acffile = bnl_STA_20160917_A_ts3_2_retapped.acf
 itl_ts3_1_acffile = bnl_STA_20160917_A_unreversed-remapped.acf
 e2v_acffile = CCD250_20161109_RCLR4.acf
+e2v_ts3_2_acffile = CCD250_20161109_RCLR4.acf
 e2v_seqfile = ${SEQUENCERFILESDIR}/E2V/seq-e2v-2s.seq
 itl_seqfile = ${SEQUENCERFILESDIR}/ITL/TS8_ITL_2s_newflush_v4.seq
 acqcfgfile = site-prod.cfg
+acqcfgfile = site-prod-expeditedtest.cfg
 rtmacqcfgfile = site-rtm-shortqe.cfg
 calfile = fluxfile.txt
