minor updates to warmup, monochromator calib and scan mode jobs

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -4,8 +4,17 @@ itl_ts3_1_acffile = bnl_STA_20160917_A_unreversed-remapped.acf
 e2v_acffile = CCD250_20161109_RCLR4.acf
 e2v_ts3_2_acffile = CCD250_20161109_RCLR4.acf
 e2v_seqfile = ${SEQUENCERFILESDIR}/E2V/seq-e2v-2s.seq
+e2v_fixcte_seqfile = ${SEQUENCERFILESDIR}/RTM2/seq-e2v-2s-fixcte_1clr.seq
 itl_seqfile = ${SEQUENCERFILESDIR}/ITL/TS8_ITL_2s_newflush_v4.seq
+itl_v2_seqfile = /home/ts8prod/sequencers/TS8_ITL_2s_newflush_v2.seq
+itl_90_seqfile = /home/ts8prod/sequencers/TS8_ITL_clockcross90.seq
+itl_old200_seqfile = ${SEQUENCERFILESDIR}/ETU1/itl-2s-200ohm.seq
+itl_iso1_seqfile = ${SEQUENCERFILESDIR}/RTM10/itl-2s-200ohm-iso1.seq
+itl_iso2_seqfile = ${SEQUENCERFILESDIR}/RTM10/itl-2s-200ohm-iso2.seq
+itl_mix_seqfile = ${SEQUENCERFILESDIR}/RTM10/itl-2s-200ohm-mix.seq
+itl_3s_seqfile = ${SEQUENCERFILESDIR}/RTM10/itl-3s-rc14.seq
+itl_v4p1p2_seqfile = ${SEQUENCERFILESDIR}/RTM11/TS8_ITL_2s_newflush_v4p1p2.seq
 acqcfgfile = site-prod.cfg
-acqcfgfile = site-prod-expeditedtest.cfg
+acqcfgfile_exp = site-prod-expeditedtest.cfg
 rtmacqcfgfile = site-rtm-shortqe.cfg
 calfile = fluxfile.txt
